fix: added word-break to prevent overflowing text on event cards

--- a/styles/components/Events/SelectedEvent.module.scss
+++ b/styles/components/Events/SelectedEvent.module.scss
@@ -39,6 +39,7 @@
 .description {
   font-size: 0.8rem;
   margin: 0.5em 0;
+  word-break: break-word;
 }
 
 .event-link {
